--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -22,7 +24,7 @@
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.6"
-  },
+      },
   "devDependencies": {
     "eslint": "7.19.0",
     "eslint-config-prettier": "^8.3.0",
